<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_detail_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/comm_topbar_style_3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10" >

                <GridView
                    android:id="@+id/chat_detail_gridview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:cacheColorHint="@null"
                    android:columnWidth="@dimen/dp_60"
                    android:fadingEdge="none"
                    android:gravity="center"
                    android:horizontalSpacing="@dimen/dp_10"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4"
                    android:scrollbars="none"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="5dp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/show_allmembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_12"
                android:visibility="gone"
                android:paddingRight="@dimen/dp_12"
                android:paddingTop="@dimen/dp_5" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_room_all_members"
                    android:textColor="@color/black_0"
                    android:textSize="@dimen/sp_15" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/member_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_4"
                        android:drawablePadding="@dimen/dp_5"
                        android:drawableRight="@drawable/go"
                        android:gravity="center_vertical"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/sp_14" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rename_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12"
                android:paddingTop="@dimen/dp_5" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_name"
                    android:textColor="@color/black_0"
                    android:textSize="@dimen/sp_15" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/room_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_4"
                        android:drawablePadding="@dimen/dp_5"
                        android:drawableRight="@drawable/go"
                        android:gravity="center_vertical"
                        android:text="@string/no_name"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/sp_14" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12"
                android:visibility="gone" >

                <LinearLayout
                    android:id="@+id/chat_detail_clean_ll"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/go"
                        android:gravity="center_vertical"
                        android:text="@string/chat_for_clean"
                        android:textColor="@color/user_detail_content_color"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/user_detail_title_line_color" />

                <LinearLayout
                    android:id="@+id/chat_detail_search_ll"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/user_office_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/go"
                        android:gravity="center_vertical"
                        android:text="@string/chat_for_search"
                        android:textColor="@color/user_detail_content_color"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/chat_detail_del_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_28"
                android:background="@drawable/btn_red"
                android:text="@string/group_chat_del_exit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>