<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/voice_rcd_hint_rcding"
        android:layout_width="@dimen/dp_130"
        android:layout_height="@dimen/dp_130"
        android:layout_centerInParent="true"
        android:background="@drawable/voice_rcd_hint_bg"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/voice_rcd_hint" />

            <ImageView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/dp_5"
                android:src="@drawable/amp7" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/dp_5"
            android:text="@string/voice_cancle_send_move"
            android:textColor="@color/chat_voice_cancle_send_color"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/voice_rcd_hint_cancle"
        android:layout_width="@dimen/dp_130"
        android:layout_height="@dimen/dp_130"
        android:layout_centerInParent="true"
        android:background="@drawable/voice_rcd_hint_bg"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/sc_img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:src="@drawable/voice_rcd_cancel_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/dp_3"
            android:background="@drawable/shape_voice_text_bg_red"
            android:padding="@dimen/dp_2"
            android:text="@string/voice_cancle_send_up"
            android:textColor="@color/chat_voice_cancle_send_color"
            android:textSize="@dimen/sp_12"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/voice_rcd_hint_tooshort"
        android:layout_width="@dimen/dp_130"
        android:layout_height="@dimen/dp_130"
        android:layout_centerInParent="true"
        android:background="@drawable/voice_rcd_hint_bg"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/sc_img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:src="@drawable/voice_too_short" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/dp_5"
            android:text="@string/voice_too_short"
            android:textColor="@color/chat_voice_cancle_send_color"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>
</RelativeLayout>